cert-manager/echo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"  
    cert-manager.io/cluster-issuer: letsencrypt-staging    
spec:
  rules:
  - host: sat-echo1.kubeshore.com
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: echo1
              port:
                number: 80
  tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
  - hosts:
    - sat-echo1.kubeshore.com
    secretName: sat-echo-tls
